fix overflow bug and mouse movement bug

--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ viewer {
     position: relative;
     top: 50%;
     left: 50%;
+    
+    overflow: hidden;
 }
 chunk {
     width: fit-content;
